force-app/main/default/objects/Linehaul_Tracking__c/Linehaul_Tracking__c.object-meta.xml
<CustomObject>
    <label>Linehaul Tracking</label>
    <nameField>
        <displayFormat>LT-{00000}</displayFormat>
        <label>Linehaul Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linehaul Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>