force-app/main/default/objects/Linehaul_Tracking__c/fields/Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>Airport_Code__c</fullName>
    <label>Airport Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>