force-app/main/default/objects/Linehaul_Tracking__c/fields/Estimate_Time_of_Departure__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Time_of_Departure__c</fullName>
    <label>Estimate Time of Departure</label>
    <type>DateTime</type>
</CustomField>