force-app/main/default/objects/Linehaul_Tracking__c/fields/Event_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Event_Datetime__c</fullName>
    <label>Event Datetime</label>
    <type>DateTime</type>
</CustomField>