force-app/main/default/objects/Linehaul_Tracking__c/fields/Flight_Detail__c.field-meta.xml
<CustomField>
    <fullName>Flight_Detail__c</fullName>
    <label>Flight Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>