force-app/main/default/objects/Linehaul_Tracking__c/fields/Linehaul_Name__c.field-meta.xml
<CustomField>
    <fullName>Linehaul_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linehaul Name</label>
    <referenceTo>Linehaul__c</referenceTo>
    <relationshipLabel>Linehaul Tracking</relationshipLabel>
    <relationshipName>Linehaul_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>