force-app/main/default/objects/Linehaul_Tracking__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <length>50</length>
    <type>Text</type>
</CustomField>