force-app/main/default/objects/Linehaul_Tracking__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AWB Booked</fullName>
            </value>
            <value>
                <fullName>AWB Finalized</fullName>
            </value>
            <value>
                <fullName>On-Route Airport</fullName>
            </value>
            <value>
                <fullName>Airline Deposited</fullName>
            </value>
            <value>
                <fullName>Pre-Flight at Airport</fullName>
            </value>
            <value>
                <fullName>Flight Departed</fullName>
            </value>
            <value>
                <fullName>Flight Arrived</fullName>
            </value>
            <value>
                <fullName>Pre-Retrieval at Airport</fullName>
            </value>
            <value>
                <fullName>Retrieved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>