force-app/main/default/objects/Linehaul_Tracking__c/fields/Status_Id__c.field-meta.xml
<CustomField>
    <fullName>Status_Id__c</fullName>
    <label>Status Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>