force-app/main/default/objects/Linehaul_Tracking__c/fields/Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Updated_By__c</fullName>
    <label>Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>