force-app/main/default/objects/Linehaul_Tracking__c/fields/Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Updated_On__c</fullName>
    <label>Updated On</label>
    <length>255</length>
    <type>Text</type>
</CustomField>