force-app/main/default/objects/Linehaul_Tracking__c/fields/User_Action__c.field-meta.xml
<CustomField>
    <fullName>User_Action__c</fullName>
    <label>User Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>