force-app/main/default/objects/Linehaul_Tracking__c/fields/Volume_Weight__c.field-meta.xml
<CustomField>
    <fullName>Volume_Weight__c</fullName>
    <label>Volume Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>