force-app/main/default/objects/Linehaul_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Linehaul_Name__c</columns>
    <columns>Airport_Code__c</columns>
    <columns>Flight_Detail__c</columns>
    <columns>Description__c</columns>
    <columns>Last_Activity__c</columns>
    <columns>Event_Datetime__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>